--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,10 @@ script:
     glivesnmp.py
   - python setup.py install --optimize=1 --root=build
   - ls -laR build
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/bf8345b86ccfc98dbe16
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
